--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,9 @@
     "jest/valid-expect": "error",
     "semi": ["error", "never"],
     "class-methods-use-this": 0,
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "arrow-parens": 0,
+    "no-plusplus": 0,
+    "no-await-in-loop": 0
   }
 } 
